link between files

--- a/css/custom.css
+++ b/css/custom.css
@@ -45,3 +45,33 @@ body { margin: 0; padding: 0; }
  /* タブの文字色 */
 .nav-tabs .nav-link { color: white; }       
 .nav-tabs .nav-link.active { color: black; }
+
+/* ポップアップテキスト */
+.image-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    background-color: #47476b;
+    color: #fff;
+    text-align: center;
+    padding: 2px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -20px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: 14px;
+  }
+  
+  .image-container:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+  }
+  
