--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,8 @@
 body { margin: 0; padding: 0; }
 
-/* Mapbox */
+/* ---------------------------------------------------------------------------------  
+  Mapbox
+--------------------------------------------------------------------------------- */ 
 #map  { position: absolute; top: 0; bottom: 0; width: 100%; }
 /* カスタムポップアップ */
 .popupCustom .mapboxgl-popup-content {
@@ -19,7 +21,9 @@ body { margin: 0; padding: 0; }
     display: block;
 }
 
-/* Chart.js */
+/* ---------------------------------------------------------------------------------  
+  Chart.js
+--------------------------------------------------------------------------------- */ 
 #canvas-container {
     display: none;
     justify-content: center; /* Horizontally center the content */
@@ -37,8 +41,33 @@ body { margin: 0; padding: 0; }
     width: 100%;
 }
 
+/* ---------------------------------------------------------------------------------  
+  positioning
+--------------------------------------------------------------------------------- */ 
+#positioning-container {
+    display: none;
+    justify-content: center; /* Horizontally center the content */
+    align-items: center; /* Vertically center the content */
+    position: absolute;
+    top: 60%; /* Position the container at the vertical center of the window */
+    left: 60%; /* Position the container at the horizontal center of the window */
+    transform: translate(-50%, -50%); /* Move the container back by half of its own width and height */
+    width: 80%; /* Set the width of the container */
+    max-width: 1000px; /* Set a maximum width for the container */
+    height: 1000px; /* Set the height of the container */
+    overflow: hidden;
+}
+#myPositioning { 
+    /* Adjust the width and height of the image */
+    max-width: 100%; /* Set the maximum width of the image to fit the container */
+    max-height: 100%; /* Set the maximum height of the image to fit the container */
+    width: auto; /* Ensure the image width adjusts to maintain aspect ratio */
+    height: auto; /* Ensure the image height adjusts to maintain aspect ratio */
+}
 
-/* カスタムCSS */
+/* ---------------------------------------------------------------------------------  
+  カスタムCSS 
+--------------------------------------------------------------------------------- */ 
 .blue-marker {
     background: linear-gradient(transparent 70%, #00ffff 80%);
 }
